ffplay: honor SDL_AUDIO_CHANNELS and make sure to use SDL supported number of audio channels

Fixes ticket #838.

Signed-off-by: Marton Balint <cus@passwd.hu>